--- a/sass/partials/_contacto.scss
+++ b/sass/partials/_contacto.scss
@@ -1,13 +1,13 @@
 /* --------------------- PÁGINA CONTACTO-------------------- */
 /* CONTACTO */
 
-.MysteryCH-contacto{
+.mysteryCH-contacto{
     font-size: 1.3rem;
     margin: 0.4rem 0;
     margin-left: 5rem;
     margin-right: 5rem;
     
-    .MysteryCH-contacto-titulo {
+    .mysteryCH-contacto-titulo {
         text-align: center;
         padding-bottom: 2rem;
     }
@@ -28,6 +28,6 @@
 
 }
 
-.MysteryCH-mapa iframe {
+.mysteryCH-mapa iframe {
     width: 100%;
 }
