--- a/sass/partials/_historia.scss
+++ b/sass/partials/_historia.scss
@@ -1,6 +1,6 @@
 /* -------------------- PAGINA HISTORIA QUIENES SOMOS -------------------*/
 
-.MysteryCH-fundador {
+.mysteryCH-fundador {
     text-align: center;
     margin-top: 2rem;
     border-bottom: 0.1rem solid #d79d65;
@@ -10,7 +10,7 @@
         margin-right: 2rem;
     }
 
-    .MysteryCH-integrantes {
+    .mysteryCH-integrantes {
         margin-top: 5rem;
         padding-top: 2rem;
         border-top: 0.1rem solid #d79d65;
@@ -20,13 +20,13 @@
             margin-bottom: 1rem;
         }
 
-        .MysteryCH-texto-izquierda {
+        .mysteryCH-texto-izquierda {
             text-align: left;
         }
     }
 }
 
-.MysteryCH-nosotros {
+.mysteryCH-nosotros {
     text-align: center;
     margin-top: 5rem;
 }
