--- a/sass/partials/_menu.scss
+++ b/sass/partials/_menu.scss
@@ -1,17 +1,17 @@
 /* ----------------------- PÁGINA MENÚ -------------------  */
 
-.MysteryCH-titulo {
+.mysteryCH-titulo {
     margin-top: 5rem;
     border-bottom: solid 0.1rem $naranja-Apagado;
     padding-bottom: 2rem;
 }
 
-.MysteryCH-tarjetas {
+.mysteryCH-tarjetas {
     margin-top: 2rem;
     width: 90%;
     margin-left: 1rem;
     
-    .MysteryCH-color-boton {
+    .mysteryCH-color-boton {
         background-color: $naranja-Destacado;
         color: $cafe-Oscuro;
         :hover {
